--- a/.platform/00_config.config
+++ b/.platform/00_config.config
@@ -1,3 +1,5 @@
 container_commands:
+  00_babel_extract:
+    command: "pybabel extract -F shweb/babel.cfg -o shweb/messages.pot shweb"
   01_reload_nginx:
     command: "service nginx reload"
