--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,11 @@ jobs:
         env:
           CR_REGISTRY: crpssp59ni0ne6f64iju
           CR_REPOSITORY: sh-web
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           docker pull cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest
-          docker build -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest -f docker/Dockerfile .
-          docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest
+          docker build --cache-from cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -f docker/Dockerfile .
+          docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
+
+          docker tag cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest
+          docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$latest
