--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,11 +41,9 @@ jobs:
           docker pull cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest
           docker build --cache-from cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -f docker/Dockerfile .
           docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
+
+      - name: Push latest
+        if: github.ref == 'refs/heads/master'
+        run: |
           docker tag cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest
           docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$latest
-
-      # - name: Push latest
-      #   if: github.ref == 'refs/heads/master'
-      #   run: |
-      #     docker tag cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest
-      #     docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$latest
