--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,13 +38,8 @@ jobs:
 
       - name: Build, tag, and push image to Yandex Cloud Container Registry
         run: |
+          docker pull cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest || true
           docker build --cache-from cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -f docker/Dockerfile .
           docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
           docker tag cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest
           docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest
-
-      # - name: Push latest
-      #   if: github.ref == 'refs/heads/master'
-      #   run: |
-      #     docker tag cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest
-      #     docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$latest
