--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,20 @@ env:
   CR_REPOSITORY: sh-web
   IMAGE_TAG: sh-web.${{ github.sha }}
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Python linter [Flake8]
+        run: |
+          python -m flake8 shweb/
+
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    if: github.ref == 'refs/heads/master'
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -32,7 +39,6 @@ jobs:
 
       - name: Python linter [Flake8]
         run: |
-          pip install flake8==4.0.1
           python -m flake8 shweb/
 
       - name: Login to Yandex Cloud Container Registry
