--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,33 +23,31 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Packages setup
+        run: |
+          pip install flake8==4.0.1
+          pip install mypy==0.950
       - name: Python linter [Flake8]
         run: |
           python -m flake8 shweb/
+      - name: Python linter [MyPy]
+        run: |
+          python -m mypy shweb/
 
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
       - name: Python linter [Flake8]
         run: |
           python -m flake8 shweb/
-
       - name: Login to Yandex Cloud Container Registry
-        if: github.ref == 'refs/heads/master'
         id: login-cr
         uses: yc-actions/yc-cr-login@v1
         with:
           yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
-
       - name: Build, tag, and push image to Yandex Cloud Container Registry
-        if: github.ref == 'refs/heads/master'
         run: |
           docker pull cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest || true
           docker build --cache-from cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:latest -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -f docker/Dockerfile .
