--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ env:
   IMAGE_TAG: sh-web.${{ github.sha }}
 
 jobs:
-  test:
+  linters:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -36,6 +36,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: linters
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v3
