--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,21 @@ jobs:
         run: |
           python -m mypy shweb/
 
+  unittests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.8"
+      - name: Packages setup
+        run: |
+          pip install -r requirements
+      - name: Pytest
+        run: |
+          PYTHONPATH=. pytest tests
+
   build:
     runs-on: ubuntu-latest
     needs: [flake8, mypy]
