--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ werkzeug==2.0.2
 marshmallow==3.14.1
 beautifulsoup4==4.10.0
 flask-cors==3.0.10
-flake8==4.0.1
-pytest==7.1.2
 python-dotenv==0.20.0
+pytest==7.1.2
+pytest-mock==3.7.0
