--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ on:
   workflow_dispatch:
 
 env:
-  CR_REGISTRY: crpssp59ni0ne6f64iju
-  CR_REPOSITORY: sh-web
+  CR_REGISTRY: ${{ secrets.CR_REGISTRY }}
+  CR_REPOSITORY: ${{ secrets.CR_REPOSITORY }}
   IMAGE_TAG: sh-web.${{ github.sha }}
 
 jobs:
