--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,22 @@ jobs:
       - name: Packages setup
         run: |
           pip install -r requirements.txt
+      - name: "Create env file"
+        run: |
+          touch .env
+          echo APP_SECRET_KEY=${{ secrets.APP_SECRET_KEY }} >> .env
+          
+          echo AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} >> .env
+          echo AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }} >> .env
+          echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
+          
+          echo AWS_USER_POOL_ID=${{ secrets.AWS_USER_POOL_ID }} >> .env
+          echo AWS_APP_CLIENT_ID=${{ secrets.AWS_APP_CLIENT_ID }} >> .env
+          echo AWS_APP_CLIENT_SECRET=${{ secrets.AWS_APP_CLIENT_SECRET }} >> .env
+          
+          echo AWS_CLOUD_FRONT_DOMAIN=${{ secrets.AWS_CLOUD_FRONT_DOMAIN_TEST }} >> .env
+          echo AWS_CLOUD_FRONT_ID=${{ secrets.AWS_CLOUD_FRONT_ID_TEST }} >> .env
+          echo S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME_TEST }} >> .env
       - name: Pytest
         run: |
           PYTHONPATH=. pytest tests
@@ -75,6 +91,7 @@ jobs:
           echo AWS_APP_CLIENT_SECRET=${{ secrets.AWS_APP_CLIENT_SECRET }} >> .env
 
           echo AWS_CLOUD_FRONT_DOMAIN=${{ secrets.AWS_CLOUD_FRONT_DOMAIN }} >> .env
+          echo AWS_CLOUD_FRONT_ID=${{ secrets.AWS_CLOUD_FRONT_ID }} >> .env
           echo S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }} >> .env
       - name: Login to Yandex Cloud Container Registry
         id: login-cr
