--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,8 +73,8 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-#    needs: [flake8, mypy, unittests]
-#    if: github.ref == 'refs/heads/master'
+    needs: [flake8, mypy, unittests]
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v3
       - name: "Create env file"
