--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -1,15 +1,22 @@
 # pull official base image
 FROM python:3.9.5-slim-buster
 
+# Prevents Python from writing pyc files to disc (equivalent to python -B option)
+ENV PYTHONDONTWRITEBYTECODE 1
+# Prevents Python from buffering stdout and stderr (equivalent to python -u option)
+ENV PYTHONUNBUFFERED 1
+
+# set work directory
+WORKDIR /opt/webapp
+
+# copy project
+COPY . .
+
 # Install packages
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     gcc \
     g++
-
-# set work directory
-WORKDIR /opt/webapp
-EXPOSE 5000
 
 # install dependencies
 RUN pip install --upgrade pip
@@ -18,9 +25,8 @@ RUN pip install -r requirements.txt
 RUN pip install gunicorn==20.1.0
 
 # Install project
-COPY docker/artifacts.sh artifacts.sh
-COPY docker/start.sh start.sh
-COPY . .
+COPY docker/web/artifacts.sh artifacts.sh
+COPY docker/web/start.sh start.sh
 
 # Add user and change user
 RUN chown -R nobody:nogroup .
