--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -1,8 +1,16 @@
+upstream web_app {
+    server web:5000;
+}
+
 server {
+    client_max_body_size 50M;
+    
     listen 80;
 
     location / {
-        uwsgi_pass web:5000;
-        include uwsgi_params;
+        proxy_pass http://web_app;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 }
