--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -3,9 +3,24 @@ upstream web_app {
 }
 
 server {
-    client_max_body_size 50M;
-    
+    server_name www.stanethuzhe.ru;
+    return 301 $scheme://stanethuzhe.ru$request_uri;
+}
+
+server {
     listen 80;
+
+    server_name _;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+
+    client_max_body_size 50M;
+    server_name stanethuzhe.ru;
+    ssl_certificate /etc/ssl/stanethuzhe.ru.crt;
+    ssl_certificate_key /etc/ssl/stanethuzhe.ru.key;
 
     location / {
         proxy_pass http://web_app;
