--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -4,16 +4,21 @@ upstream web_app {
 
 server {
     listen 80;
-
-    server_name _;
-    return 301 https://$host$request_uri;
+    server_name stanethuzhe.ru www.stanethuzhe.ru;
+    return 301 https://stanethuzhe.ru$request_uri;
 }
 
 server {
     listen 443 ssl;
+    server_name www.stanethuzhe.ru;
+    return 301 https://stanethuzhe.ru$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name stanethuzhe.ru;
 
     client_max_body_size 50M;
-    server_name stanethuzhe.ru;
     ssl_certificate /etc/ssl/stanethuzhe.ru.crt;
     ssl_certificate_key /etc/ssl/stanethuzhe.ru.key;
 
