add redirect ssl

--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -11,6 +11,10 @@ server {
 server {
     listen 443 ssl;
     server_name www.stanethuzhe.ru;
+    
+    ssl_certificate /etc/ssl/stanethuzhe.ru.crt;
+    ssl_certificate_key /etc/ssl/stanethuzhe.ru.key;
+
     return 301 https://stanethuzhe.ru$request_uri;
 }
 
