remove copy from nginx

--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -12,8 +12,8 @@ server {
     listen 443 ssl;
     server_name www.stanethuzhe.ru;
     
-    ssl_certificate /etc/ssl/stanethuzhe.ru.crt;
-    ssl_certificate_key /etc/ssl/stanethuzhe.ru.key;
+    ssl_certificate /etc/ssl/nginx/stanethuzhe.ru.crt;
+    ssl_certificate_key /etc/ssl/nginx/stanethuzhe.ru.key;
 
     return 301 https://stanethuzhe.ru$request_uri;
 }
@@ -23,8 +23,8 @@ server {
     server_name stanethuzhe.ru;
 
     client_max_body_size 50M;
-    ssl_certificate /etc/ssl/stanethuzhe.ru.crt;
-    ssl_certificate_key /etc/ssl/stanethuzhe.ru.key;
+    ssl_certificate /etc/ssl/nginx/stanethuzhe.ru.crt;
+    ssl_certificate_key /etc/ssl/nginx/stanethuzhe.ru.key;
 
     location / {
         proxy_pass http://web_app;
