--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     build:
       context: .
       dockerfile: ./docker/nginx/Dockerfile
+    volumes: 
+     - /etc/ssl/nginx:/etc/ssl/nginx
     ports:
       - 80:80
       - 443:443
