--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,15 +2,13 @@ name: Deploy
 on: [workflow_dispatch]
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_KEY }}
-        script: |
-          whoami
-          ls -al
+      - uses: actions/checkout@v3
+      - name: "deploy"
+        run: |
+          ssh-add - <<< "${{ secrets.SERVER_KEY }}"
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} -f '
+              cd sh-web
+              ls
+          '
