--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: "deploy"
         run: |
+          eval `ssh-agent -s`
           ssh-add - <<< "${{ secrets.SERVER_KEY }}"
           ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} -f '
               cd sh-web
